feat/CHAR-5: added intro heading with styles

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,6 @@
 .header {
   height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(rgb(2, 7, 2), 0.8),
-      rgba(orange, 0.8)
-    ),
-    url('https://www.hostinger.com/tutorials/wp-content/uploads/sites/2/2022/04/web-developer-portfolio.webp');
+  background-image: linear-gradient(to right bottom, #085078, #85d8ce);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -19,11 +14,11 @@
   }
 
   &__avatar__logo {
-    height: 11rem;
+    height: 12rem;
     border-radius: 50%;
   }
 
-  &__text-box {
+  &__heading--container {
     position: absolute;
     top: 40%;
     left: 50%;
