--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,5 @@
-@import 'layout/header';
+@import 'base/base';
+@import 'base/animations';
+@import 'base/typography';
+
+@import 'abstracts/variables';
