--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,61 @@ body {
   box-sizing: border-box;
   padding: 3rem; }
 
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem); }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 6rem; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3rem;
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub--1 {
+    display: block;
+    font-size: 1.1rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+    margin: 3rem; }
+  .heading-primary--sub--2 {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 1.75rem;
+    animation: moveInRight 1s ease-out; }
+
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(2, 7, 2, 0.8), rgba(255, 165, 0, 0.8)), url("https://www.hostinger.com/tutorials/wp-content/uploads/sites/2/2022/04/web-developer-portfolio.webp");
+  background-image: linear-gradient(to right bottom, #085078, #85d8ce);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -24,9 +76,9 @@ body {
     top: 4rem;
     left: 4rem; }
   .header__avatar__logo {
-    height: 11rem;
+    height: 12rem;
     border-radius: 50%; }
-  .header__text-box {
+  .header__heading--container {
     position: absolute;
     top: 40%;
     left: 50%;
