--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,9 @@
+@import 'abstracts/variables';
+
 @import 'base/base';
 @import 'base/animations';
 @import 'base/typography';
 
-@import 'abstracts/variables';
+@import 'components/button';
+
+@import 'layout/header';
