--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,55 @@ body {
     letter-spacing: 1.75rem;
     animation: moveInRight 1s ease-out; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #85d8ce, #0d4d72);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.05);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.span-technologies {
+  font-size: 2.5rem;
+  display: inline-block;
+  background-image: linear-gradient(to right, #85d8ce, #0d4d72);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s; }
+  .span-technologies:hover {
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -114,9 +163,58 @@ body {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  color: #85d8ce;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #85d8ce;
+  padding: 3px;
+  transition: all 0.2s; }
+
+.btn-text:hover {
+  background-color: #085078;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
+.project-preview {
+  position: relative; }
+  .project-preview__photo {
+    width: 65%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 0;
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem; }
+    .project-preview__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .project-preview__photo--p2 {
+      right: 0;
+      top: 20px; }
+    .project-preview__photo--p3 {
+      left: 20%;
+      top: 10rem; }
+    .project-preview__photo--p4 {
+      left: 55%;
+      top: 7rem;
+      width: 40%; }
+    .project-preview__photo:hover {
+      outline: 1.5rem solid #85d8ce;
+      transform: scale(1.1) translateY(-2rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .project-preview:hover .project-preview__photo:not(:hover) {
+    transform: scale(0.95); }
+
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, #085078, #85d8ce);
+  background-image: linear-gradient(to right bottom, #085078, rgba(133, 216, 206, 0.9)), url("../images/header-img.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -134,3 +232,24 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.row {
+  max-width: 114rem;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: '';
+    display: table;
+    clear: both; }
+  .row [class^='col-'] {
+    float: left; }
+    .row [class^='col-']:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+
+.section-projects {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
