--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $default-font-size: 1.6rem;
 // COLORS
 $color-primary: #085078;
 $color-primary-light: #85d8ce;
-$color-primary-dark: #023a58;
+$color-primary-dark: #0d4d72;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
@@ -12,3 +12,8 @@ $color-grey-light-2: #eee;
 $color-white: #fff;
 $color-grey-dark: #777;
 $color-black: rgba(0, 0, 0, 0.2);
+
+// GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
