--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,15 @@
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 @import 'base/base';
 @import 'base/animations';
 @import 'base/typography';
+@import 'base/utilities';
 
 @import 'components/button';
+@import 'components/composition';
 
 @import 'layout/header';
+@import 'layout/grid';
+
+@import 'pages/home';
