--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,13 +14,21 @@
 
   &__avatar__logo-container {
     position: absolute;
-    top: 4rem;
+    top: 6rem;
     left: 4rem;
   }
 
   &__avatar__logo {
     height: 12rem;
     border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+    transition: all 0.2s;
+
+    &:hover {
+      outline: 1rem solid $color-primary-light;
+      transform: scale(1.1) translateY(-2rem);
+    }
   }
 
   &__heading--container {
