--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,17 @@ body {
   font-weight: 700;
   text-transform: uppercase; }
 
+.heading-about {
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: 1.5rem;
+  text-align: center;
+  text-transform: uppercase;
+  width: 20%;
+  margin: 0 auto;
+  background-image: linear-gradient(to right, #85d8ce, #0d4d72); }
+
 .paragraph {
   font-size: 1.6rem; }
   .paragraph:not(:last-child) {
@@ -212,6 +223,24 @@ body {
   .project-preview:hover .project-preview__photo:not(:hover) {
     transform: scale(0.95); }
 
+.about-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s; }
+  .about-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    background-image: linear-gradient(to right, #85d8ce, #0d4d72);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent; }
+  .about-box:hover {
+    transform: translateY(-1.5rem) scale(1); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, #085078, rgba(133, 216, 206, 0.9)), url("../images/header-img.jpg");
@@ -248,8 +277,19 @@ body {
       margin-right: 6rem; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
 
 .section-projects {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 30rem 0;
   margin-top: -20vh; }
+
+.section-about {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(133, 216, 206, 0.8), rgba(13, 77, 114, 0.8)), url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -20rem; }
+  .section-about > * {
+    transform: skewY(7deg); }
