--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import 'components/button';
 @import 'components/composition';
+@import 'components/about-box';
 
 @import 'layout/header';
 @import 'layout/grid';
