--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,82 @@ body {
   .about-box:hover {
     transform: translateY(-1.5rem) scale(1); }
 
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem;
+  cursor: pointer; }
+  .card__side {
+    height: 50rem;
+    transition: all 0.8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg);
+      color: #fff; }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72), url("../images/front-end.jpeg"); }
+    .card__picture--2 {
+      background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72), url("../images/back-end.png"); }
+    .card__picture--3 {
+      background-image: linear-gradient(to right bottom, #85d8ce, #0d4d72), url("../images/tools.avif"); }
+  .card__heading {
+    font-size: 2.6rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(133, 216, 206, 0.85), rgba(13, 77, 114, 0.85)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, rgba(133, 216, 206, 0.85), rgba(13, 77, 114, 0.85)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, rgba(133, 216, 206, 0.85), rgba(13, 77, 114, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, #085078, rgba(133, 216, 206, 0.9)), url("../images/header-img.jpg");
@@ -283,6 +359,8 @@ body {
       margin-right: 6rem; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-1-of-4 {
     width: calc((100% - 3 * 6rem) / 4); }
 
@@ -299,3 +377,8 @@ body {
   margin-top: -20rem; }
   .section-about > * {
     transform: skewY(7deg); }
+
+.section-technologies {
+  background-color: #f7f7f7;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem; }
