--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .heading-primary {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
